--- a/app/src/main/res/layout/activity_admin_page.xml
+++ b/app/src/main/res/layout/activity_admin_page.xml
@@ -198,6 +198,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/addMenu"
             android:layout_width="match_parent"
             android:background="@drawable/addtocartshape"
             android:layout_height="match_parent">
@@ -241,6 +242,7 @@
         app:layout_constraintStart_toEndOf="@+id/cardView5"
         app:layout_constraintTop_toTopOf="@+id/cardView5">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/allItemMenu"
             android:layout_width="match_parent"
             android:background="@drawable/addtocartshape"
             android:layout_height="match_parent">
