--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,13 +7,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/Green"
+    android:background="@color/lavendar"
     tools:context=".Signup">
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="80dp"
+        android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginBottom="10dp"
         app:srcCompat="@drawable/quickbites" />
 
     <androidx.cardview.widget.CardView
