--- a/app/src/main/res/layout/activity_admin_page.xml
+++ b/app/src/main/res/layout/activity_admin_page.xml
@@ -312,6 +312,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/OrderDispatch"
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
