--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -7,13 +7,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".Login_Page"
-    android:background="@color/lavendar">
+    tools:context=".LoginPage"
+    android:background="@color/bg">
 
     <ImageView
         android:id="@+id/quick"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="223dp"
+        android:layout_height="147dp"
+        android:layout_weight="1"
         app:srcCompat="@drawable/quickbites" />
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -34,7 +35,6 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/courier_prime"
                 android:text="Login"
                 android:textAlignment="center"
                 android:textColor="@color/bg"
@@ -75,7 +75,16 @@
                     android:padding="8dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
-
+            <TextView
+                android:id="@+id/forgot_password"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:text="Forgot Password ?"
+                android:textAlignment="center"
+                android:textColor="@color/bg"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/Login_button"
