--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,51 +2,49 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/Green"
-    android:background="@color/white"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/bg">
+
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="306dp"
         android:layout_height="298dp"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="304dp"
         app:layout_constraintBottom_toTopOf="@+id/get_started"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/admin" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/eating" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="150dp"
+        android:layout_width="234dp"
         android:layout_height="197dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.576"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/quickbites" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="149dp"
-        android:layout_height="107dp"
-        android:text="Hello\n Admin"
-        android:textColor="@color/black"
+        android:layout_width="195dp"
+        android:layout_height="102dp"
+        android:text="Food for Everyone"
+        android:textColor="#FAFAFA"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.297"
+        app:layout_constraintHorizontal_bias="0.342"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -54,14 +52,16 @@
         android:layout_width="256dp"
         android:layout_height="70dp"
         android:layout_marginBottom="28dp"
-        android:backgroundTint="@color/bg"
+        android:backgroundTint="@color/white"
         android:text="Get Started"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/white"
+        android:textColor="@color/bg"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
