--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,14 +7,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/lavendar"
+    android:background="@color/bg"
     tools:context=".Signup">
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="10dp"
         app:srcCompat="@drawable/quickbites" />
 
     <androidx.cardview.widget.CardView
@@ -76,8 +75,8 @@
                 android:background="@drawable/orange_border"
                 android:drawableLeft="@drawable/baseline_email_24"
                 android:drawablePadding="8dp"
-                android:hint="Enter id"
-                android:inputType="number"
+                android:hint="Mobile No"
+                android:inputType="phone"
                 android:padding="8dp"
                 android:textColor="@color/black" />
 
