--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.QuickbitesAdminpanel" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <item name="colorPrimary">@color/Orange</item>
-        <item name="colorPrimaryVariant">@color/Orange</item>
-        <item name="android:statusBarColor">@color/Orange</item>
+    <style name="Base.Theme.QuickBites" parent="Theme.Material3.DayNight.NoActionBar">
+    <!-- Customize your light theme here. -->
+    <item name="colorPrimary">@color/Orange</item>
+    <item name="colorPrimaryVariant">@color/Orange</item>
+    <item name="android:statusBarColor">@color/Orange</item>
     </style>
 
-    <style name="Theme.QuickbitesAdminpanel" parent="Base.Theme.QuickbitesAdminpanel" />
+    <style name="Theme.QuickBites" parent="Base.Theme.QuickBites" />
 </resources>
